# energy_QoT_rmsa

./: .gitattributes  .gitignore  CITATION.cff  DATA_LICENSE.md  MODEL_ARTIFACTS_LICENSE.md  NOTICE.md  README.md  environment-repro.yml  pyproject.toml  requirements-data.txt  requirements-experiments.txt  requirements-repro-lock.txt  requirements-repro.txt  sitecustomize.py
artifacts/provenance/: dataset_checksums.sha256  model_artifact_checksums.sha256  model_lineage.yaml  mvp80_result_checksums.sha256  source_commits.yaml
configs/data/: nsfnet_full_template.yaml  nsfnet_mvp.yaml  nsfnet_mvp_hybrid_qhead.yaml  nsfnet_smoke.yaml  nsfnet_smoke_hybrid_qhead.yaml
configs/evaluation/: mvp80_selected_topn_p95_compare_clean.yaml
data/eon/: README.md
docs/: data_description.md  environment_reproduction.md  experiment_runbook.md  optical_networking_gym_setup.md  paper_model_mapping.md  remote_experiment_setup.md  training_lineage.md
docs/experiments/: dqn_pressure_soft_mvp20_mvp80_2026-06-05.md  mvp80_ksp_heuristics_compare_2026-05-31.md  top32_xlron_cf_rank_g160_mvp80_2026-06-10.md
docs/model_cards/: a3c_distill_full_dqn.md  calibrated_dqn_override.md  full_dqn_stratified32_e5.md  heuristics.md  lightgbm_override_old10.md  xlron_cf_rank_g160_bucket_guard.md
scripts/: reproduce_mvp80.py
scripts/analysis/: build_mvp80_statistics.py
scripts/experiments/: audit_exception_safety.py  audit_neural_three_head_live_overrides.py  audit_online_base_topn_counterfactuals.py  audit_top32_counterfactual_signal.py  build_calibrated_counterfactual_dataset.py  (+56 more)
(+403 files in other folders)
